@@ -4,6 +4,7 @@
     * Fix "edit" link with message link icons stylesheet
     * Update 8for11 CSS
     * Fix QuickPost reset button
+    * More robust QuickPost which may fix the bugs affecting some people
 
 2011-02-05:
     * version 0.7.11
